--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -1,418 +1,6 @@
-.index-page{
-  h2{
-    font-family: 'oswald';
-    text-transform: uppercase;
-    font-size: 1rem;
-    font-weight: 400;
-  }
-  h1{
-    font-family: 'oswald';
-    text-transform: uppercase;
-    font-family: 3rem;
-
-  }
-  p{
-    font-family: 'Open Sans';
-  }
-  .section1{
-    position: relative;
-    margin-top: $headerMin;
-
-    @include tablet{
-      margin-top: $headerMax;
-    };
-    &-slide{
-      img{
-        //max-width:1024px;
-      }
-    }
-    &-text{
-      //modificcacion de css
-      background-color: rgba(255, 255, 255, 0.9);
-      border-radius: 7px;
-      padding: 20px;
-      transition: all 0.5s ease-out;
-      // ultimo cambio de css
-      position: relative;
-      @include  desktop{
-        position: absolute;
-      };
-
-      &.firstIndex{
-
-        background: -webkit-linear-gradient(transparent,rgba(255,255,255,1));
-        @include desktop{
-          width: 600px !important;
-          top: auto;
-          bottom:5%;
-          right: auto;
-          left: calc(50% - 300px);
-        };
-      }
-      //pendiente aplicar degradado por slide
-      //
-      transition: all 0.3s ease-out;
-      z-index: 4;
-      @include desktop{
-        position: absolute;
-        right: 20px;
-        top: 10%;
-        width: 500px !important;
-        //height: 500px;
-      };
-      a{
-        text-decoration: none;
-    color: initial;
-      }
-      h1{
-        font-family: 'Montserrat', sans-serif;
-        letter-spacing: 0px;
-
-        @include tablet{
-        font-size:  4rem !important;
-        };
-      }
-      h2{
-        color: $naranja-diseno;
-        //text-shadow: -1px 1px rgba(0,0,0,0.8);
-        font-weight: bold;
-        font-size: 1.1rem;
-      }
-      p{
-        text-align: center;
-        //background-color: rgba(255,255,255,0.3);
-        font-size: 17px;
-        font-weight: 500;
-        color: black !important;
-      }
-    }
-      .icon-down{
-        position: absolute;
-        //background: red;
-        left : calc(50% - 25px);
-        //bottom: 0;
-        width: 50px;
-        height: 50px;
-        z-index: 100;
-        animation-duration: 1.5s;
-        animation-name: slidein;
-        animation-iteration-count: infinite;
-        display: none;
-        @include tablet{
-          display: block;
-        };
-      }
-
-
-
-
-    .image-gallery{
-      &-slides{
-        height: auto;
-width: 100%;
-      }
-    }
-
-  }
-  .search{
-
-
-        height: auto;
-
-    &.havetransitems{
-      height: 0px;
-      overflow: hidden;
-      padding: 0px;
-    }
-    .wrap-select{
-      width: 100%;
-      @include tablet{
-        width: auto;
-      };
-    .Select{
-      width: 100%;
-      @include tablet{
-        width: 400px;
-      };
-      &-placeholder{
-        font-family: 'oswald';
-      }
-      &-value{
-        font-family: 'oswald';
-      }
-      &-option{
-        font-family: 'oswald';
-      }
-      &-control{
-        border-color: #ffffff #fff #ffffff !important;
-        border: 1px solid #fff !important;
-        @include tablet{
-          width: 400px !important;
-        };
-      }
-    }
-  }
-    // .Select-control{
-    //   border-color: #ffffff #fff #ffffff !important;
-    //   border: 1px solid #fff !important;
-    // }
-    &-wrap{
-      flex-direction: column;
-
-      @include tablet{
-        flex-direction: row;
-      };
-      .label{
-        font-family: 'oswald';
-      }
-    }
-  }
-  .sectionItems{
-    height: auto;
-    &.havetransitems{
-      height: 0px;
-      overflow: hidden;
-      padding: 0px;
-    }
-    background-image: url('/img/bg-slides-items.jpg');
-    background-position: center center;
-    background-repeat: no-repeat;
-    background-size: auto 100%;
-    padding: 40px 0.75rem;
-    padding-bottom: 20px;
-    @include tablet{
-      background-size: 100% 100%;
-    }
-    h2{
-      font-family: 'Montserrat', sans-serif;
-      color: white;
-      margin-bottom: 0px;
-      padding: 0 0.75rem;
-    }
-    .wrapResults{
-      display: flex;
-      flex-direction: column-reverse;
-      margin-top: 5px;
-      @include tablet{
-        flex-direction: row;
-      };
-      &-container{
-
-        display: flex;
-        flex-direction: column;
-        transition: all 0.5s ease-in;
-        @include nomobileNav1000{
-
-        };
-        @include desktop-max{
-          //flex: 2;
-
-        };
-        &-slide{
-          display: flex;
-          justify-content: center;
-          align-items: center;
-          margin-bottom: 20px;
-          .list-items{
-            position: relative;
-            height: 600px;
-            transition: all 0.3s ease-out;
-            overflow-x: hidden;
-            @include tablet{
-              margin-left: 0px;
-              max-width:none;
-            };
-            &-wrap{
-                height: 600px;
-                position: absolute;
-                left: 0px;
-                top: 0px;
-                transition: left 0.3s ease-out;
-                .item{
-                  width: 290px;
-                  height: 290px;
-                  //border: 1px solid black;
-                  box-sizing: border-box;
-                  position: absolute;
-                  //@extend .red;
-                  &-image{
-                    position: absolute;
-                    width: 100%;
-                    height: 100%;
-                    background-repeat: no-repeat;
-                    background-position: center center;
-                    background-size: auto 100%;
-                    z-index: 0;
-                    img{
-                      height: 100%;
-                    }
-                  }
-                  &-details{
-                    z-index: 1;
-                    position: absolute;
-                    width: 100%;
-                    height: 100%;
-                    display: flex;
-                    justify-content: center;
-                    flex-direction: column;
-                    &-offer{
-                      flex: 1;
-
-                      display: flex;
-                      justify-content: flex-end;
-                      align-items: flex-start;
-                      label{
-                        color: white;
-                        padding: 10px 15px;
-                        font-family: 'oswald';
-                        background-color: #ff6600;
-                        word-break: break-all;
-                      }
-                    }
-                    &-description{
-                      flex: 2;
-                      display: flex;
-                      flex-direction: column;
-                      justify-content: flex-end;
-                      align-items: flex-start;
-                      padding-bottom: 10px;
-                      padding-left: 5px;
-                      h3{
-                        color: white;
-                        font-family: 'Open Sans';
-                        font-size: 16px;
-                        font-weight: 700;
-                        text-shadow: -2px 1px black;
-                        text-transform: uppercase;
-                      }
-                      a{
-                        padding: 5px 10px;
-                        border: 2px dotted white;
-                        color : white;
-                        text-decoration: none;
-                        font-family: 'oswald';
-                        font-size: 0.9rem;
-                        cursor: pointer;
-                        transition: all 0.3s ease-in;
-                        background-color: rgba(0,0,0,0.3);
-                        &:hover{
-                          background-color: #ff6600;
-                          border-color: rgab(0,0,0,0.1);
-                        }
-                      }
-                    }
-                  }
-                }
-            }
-
-          }
-        }
-        &-bullets{
-          .wrap-items{
-            .bullets{
-              &:hover{
-                cursor: pointer;
-              }
-              &.active{
-                background-color: #ff6600 !important;
-              }
-            }
-          }
-        }
-      }
-      &-categories{
-        flex: 1;
-        padding: 0px 10px;
-        justify-content: flex-start;
-        align-content: flex-start;
-        @include tablet{
-          padding: 0px 20px;
-        };
-        @include desktop{
-          padding: 0px 30px;
-        };
-        strong{
-            font-weight: 800;
-            font-family: 'Open Sans', sans-serif;
-        }
-        .categories{
-          background-color: rgba(24,29,43,0.5);
-          width: 300px;
-          width: 100%;
-          @include tablet{
-            width: 100%;
-            height: 600px;
-
-          };
-          @include desktop{
-            width: 80%;
-          };
-          p{
-            font-family: 'Open Sans', sans-serif;
-          }
-          h3{
-            font-family: 'Open Sans', sans-serif;
-            font-weight: 300;
-
-          }
-          ul{
-            li{
-              font-family: 'Open Sans', sans-serif;
-              list-style: none;
-              margin: 10px 5px;
-              a{
-                text-decoration: none;
-              }
-            }
-          }
-
-        }
-      }
-    }
-  }
-  .espacio{
-    &.havetransitems{
-      padding: 0px !important;
-    }
-  }
-  .transferSection{
-    background-image: url('/img/bg-transfer.jpg');
-    background-size: 100%;
-    //@extend .red;
-    //background-color: rgba(255,255,255,1);
-    &-image{
-      position: relative;
-      text-align: center;
-      img{
-        position: relative;
-        width: 300px;
-        @include tablet{
-            position: relative;
-            top: -40px;
-            right: 0px;
-        };
-      }
-    }
-    &-engine{
-      h3{
-        text-transform: uppercase;
-        font-family: 'oswald', sans-serif;
-        @extend .white-text;
-        span{
-          font-weight: 700;
-        }
-      }
-    }
-  }
-
-}
-
-
-@keyframes slidein{
-  from {
-    bottom: 30px;
-  }
-  to {
-    bottom: 0px;
-  }
+.indexPage{
+  margin-top: $headerMin;
+  @include desktop{
+    margin-top: $headerMax;
+  };
 }
